# eunoia

./: .gitignore  AI_FEATURES_EUNOIA.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATES.md  LICENSE  README.md  TUTORIAL.md  lib.rs  package-lock.json  package.json
.cursor/rules/: README_md.mdc  agent_services.mdc  aptos-eunoia-contract-guide.mdc  backend_eunoia_backend_manage_py.mdc  backend_eunoia_backend_requirements_txt.mdc  eunoia_backend_structure.mdc  eunoia_web_public_layout.mdc  eunoia_web_src_layout.mdc  openai-agents-sdk.mdc
.github/workflows/: azure-static-web-apps-green-moss-0b96db80f.yml
aptos_contracts/sources/: eunoia.move
backend/eunoia_backend/: MIGRATION_CHANGES_SUMMARY.md  MOVEMENT_FETCHING_FLOW.md  QUICK_REFERENCE.md  create_charity.py  delete_test_charities.py  manage.py  register_test_charities.py  requirements.txt  startup.sh  trigger_movement_research.py  verify_all_charities.py
contract/: Move.toml
contract/sources/: charity_donation.move  eunoia.move  usdc.move
docs/: TESTING_GUIDE.md
docs/compass/: README.md  algorithms.md  api.md  architecture.md  movements.md
eunoia_backend/: check_charities.py  startup.sh
eunoia_web/: .eslintignore  .gitignore  README.md  package-lock.json  package.json
eunoia_web2/: package-lock.json  package.json
polkadot-react-app/: package.json
polkadot_contracts/eunoia2/: Cargo.toml  lib.rs
terraform/: variables.tf
tests/: __init__.py  test_charity_registration.py  test_compass_matching.py  test_movements_research.py
tutorial/: compass-tutorial.md  integration_test.md  tutorial.md
(+101 files in other folders)
