[package]
name = "eunoia_new"
version = "0.1.0"
authors = ["Eunoia Team"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = [] 