[package]
name = "eunoia2"
version = "0.1.0"
authors = ["Eunoia Team"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = [] 